[gd_scene load_steps=8 format=3 uid="uid://cqvoqkj3og2qb"]

[ext_resource type="Script" path="res://script/mainmenu.gd" id="1_3oi6w"]
[ext_resource type="Texture2D" uid="uid://dog05gni65i6p" path="res://art/environment/mainmenu.jpg" id="1_488b5"]
[ext_resource type="FontFile" uid="uid://bitw05v3lyfmg" path="res://fonts/grapesoda/GrapeSoda.ttf" id="2_55ar2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hc63t"]
texture = ExtResource("1_488b5")
modulate_color = Color(0.377919, 0.377919, 0.377919, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ti6rp"]
bg_color = Color(0.419608, 0.556863, 0.137255, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n3xpv"]
bg_color = Color(0.333333, 0.419608, 0.184314, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mor1w"]
bg_color = Color(0.646029, 0.646029, 0.646029, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="mainmenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3oi6w")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_hc63t")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -223.0
offset_top = -77.0
offset_right = 223.0
offset_bottom = 251.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.960784, 0.960784, 0.862745, 1)
theme_override_fonts/font = ExtResource("2_55ar2")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_ti6rp")
theme_override_styles/hover = SubResource("StyleBoxFlat_n3xpv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mor1w")
theme_override_styles/normal = SubResource("StyleBoxFlat_ti6rp")
text = "Start game"

[node name="options" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.960784, 0.960784, 0.862745, 1)
theme_override_fonts/font = ExtResource("2_55ar2")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_ti6rp")
theme_override_styles/hover = SubResource("StyleBoxFlat_n3xpv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mor1w")
theme_override_styles/normal = SubResource("StyleBoxFlat_ti6rp")
text = "Instructions
"

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.960784, 0.960784, 0.862745, 1)
theme_override_fonts/font = ExtResource("2_55ar2")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_ti6rp")
theme_override_styles/hover = SubResource("StyleBoxFlat_n3xpv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mor1w")
theme_override_styles/normal = SubResource("StyleBoxFlat_ti6rp")
text = "Exit
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -363.5
offset_top = -254.0
offset_right = 363.5
offset_bottom = -124.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.180392, 0.545098, 0.341176, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("2_55ar2")
theme_override_font_sizes/font_size = 100
text = "Survive the wild
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
